[gd_scene load_steps=8 format=3 uid="uid://3v528pdt3rxf"]

[ext_resource type="Script" uid="uid://brcpn0rfxrl6s" path="res://obstacle_new.gd" id="1_uyw5p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_q51th"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uyw5p"]
albedo_color = Color(0.24313726, 0.4392157, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_iyses"]

[sub_resource type="Animation" id="Animation_uyw5p"]
resource_name = "obstacle_flip_up"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2.6390157, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.5707964, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8owox"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8owox"]
_data = {
&"RESET": SubResource("Animation_8owox"),
&"obstacle_flip_up": SubResource("Animation_uyw5p")
}

[node name="AnimatableBody3D" type="AnimatableBody3D"]
script = ExtResource("1_uyw5p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_q51th")
disabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.92093813, 0, 0, 0, 0.25228152, 0, 0, 0, 1.7496387, 0, 0, 0)
material_overlay = SubResource("StandardMaterial3D_uyw5p")
mesh = SubResource("BoxMesh_iyses")
skeleton = NodePath("")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
aabb = AABB(-0.43611935, -0.129814, -0.9050548, 0.8722387, 0.259628, 1.8101096)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8owox")
}

[node name="FlipUpTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="FlipUpTimer" to="." method="_on_flip_up_timer_timeout"]
